--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -13,7 +13,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginBottom="49dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ic_logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintBottom_toTopOf="@id/appNameTV"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,13 +27,23 @@
             android:padding="10dp"
             android:text="@string/app_name"
             android:textColor="?colorOnPrimary"
-            android:textSize="32sp"
+            android:textSize="@dimen/text_medium"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth="wrap_content" />
+
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:progressTint="?colorOnPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/appNameTV" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
