--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -32,15 +32,27 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="15dp" />
 
+        <ImageView
+            android:id="@+id/iconIV"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:scaleType="fitXY"
+            app:layout_constraintStart_toStartOf="@id/startGuideline"
+            app:layout_constraintTop_toTopOf="@id/topGuideline" />
+
         <TextView
             android:id="@+id/nameTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:textColor="?colorOnSecondary"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/startGuideline"
-            app:layout_constraintTop_toTopOf="@+id/topGuideline" />
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toEndOf="@id/endGuideline"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toEndOf="@+id/iconIV"
+            app:layout_constraintTop_toTopOf="@+id/iconIV" />
 
         <TextView
             android:id="@+id/dateTV"
@@ -50,7 +62,10 @@
             android:textColor="?colorOnSecondary"
             android:textSize="14sp"
             android:textStyle="normal"
-            app:layout_constraintStart_toStartOf="@+id/startGuideline"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toEndOf="@id/endGuideline"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="@+id/nameTV"
             app:layout_constraintTop_toBottomOf="@+id/nameTV" />
 
         <View
@@ -61,6 +76,6 @@
             android:background="@color/grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dateTV" />
+            app:layout_constraintTop_toBottomOf="@id/iconIV" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
